<resources>
    <string name="app_name">harkkatyo</string>
    <string name="login_name">Co2 App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_housing">HousingActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="consumption_preferences">Consumption preferences</string>
    <string name="consumption_clothing">Clothing(eur/month):</string>
    <string name="consumption_electronics">Electronics(eur/month):</string>
    <string name="consumption_paper">Paper(eur/month):</string>
    <string name="consumption_recreation">Recreation(eur/month):</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">cancel</string>
    <string name="range_0_1000">Range: 0 - 1000</string>
    <string name="range_0_5000">Range: 0 - 5000</string>
    <string name="currently">Currently:</string>
    <string name="housing_preferences">Housing preferences</string>
    <string name="housing_type">Housing type:</string>
    <string name="housing_area">Area(m²):</string>
    <string name="housing_residents">Residents:</string>
    <string name="housing_range">Range: 1 - ∞</string>
    <string name="email">Email</string>
    <string name="account">Account</string>
    <string name="no_account">Dont have an account? Register here</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="new_account">Create a new Account</string>
    <string name="confirm">Confirm</string>
    <string name="summary">Summary</string>
    <string name="name">Name</string>
    <string name="save_data_to_file">(Save data to file)</string>
    <string name="vehicle_preferences">Vehicle preferences</string>
    <string name="vehicle_fuel_type">Fuel type:</string>
    <string name="vehicle_year">Build year:</string>
    <string name="vehicle_size">Size:</string>
    <string name="vehicle_passengers">Passengers:</string>
    <string name="consumption_summary_total">Consumption summary total</string>
    <string name="range_vehicle_year">Range: 1800 - 2021</string>
    <string name="distance_driven">Distance driven(km/year):</string>
    <string name="range_dist">Range: 0 - 120 000</string>
    <string name="range_passengers">Range: 1 - 10</string>
    <string name="consumption_info">Consumption info</string>
    <string name="house_info">House info</string>
    <string name="car_info">Car info</string>
    <string name="create_summary">Create summary</string>
    <string name="not_saved">Not saved</string>
    <string name="menu_return">Return</string>
    <string name="save_data">Save data</string>
    <string name="summary_consumption">(consumption)</string>
    <string name="summary_housing">(housing)</string>
    <string name="summary_vehicle">(vehicle)</string>
    <string name="summary_total">(total)</string>
</resources>