<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HousingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/housing_type"
                        app:layout_constraintBottom_toTopOf="@+id/spinner_HouseType"
                        app:layout_constraintStart_toStartOf="@+id/spinner_HouseType" />

                    <Spinner
                        android:id="@+id/spinner_HouseType"
                        android:layout_width="201dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="25dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/housing_area"
                        android:layout_marginBottom="15dp"
                        app:layout_constraintBottom_toTopOf="@+id/editText_HousingArea"
                        app:layout_constraintStart_toStartOf="@+id/editText_HousingArea" />

                    <EditText
                        android:id="@+id/editText_HousingArea"
                        android:layout_width="198dp"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:hint="@string/housing_range"
                        android:inputType="numberDecimal"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="25dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_HousingArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currently"
                        android:layout_marginStart="25dp"
                        app:layout_constraintStart_toEndOf="@+id/editText_HousingArea"
                        app:layout_constraintTop_toTopOf="@+id/editText_HousingArea" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/housing_residents"
                        android:layout_marginBottom="15dp"
                        app:layout_constraintBottom_toTopOf="@+id/editText_HouseResidents"
                        app:layout_constraintStart_toStartOf="@+id/editText_HouseResidents" />

                    <EditText
                        android:id="@+id/editText_HouseResidents"
                        android:layout_width="199dp"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:hint="@string/housing_range"
                        android:inputType="number"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="25dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_HousingResidents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currently"
                        android:layout_marginStart="25dp"
                        app:layout_constraintStart_toEndOf="@+id/editText_HouseResidents"
                        app:layout_constraintTop_toTopOf="@+id/editText_HouseResidents" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:text="@string/housing_preferences"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_HousingSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="saveChanges"
                android:text="@string/save_changes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_HousingCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="cancel"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>