<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/vehicle_preferences"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/vehicle_fuel_type"
                        app:layout_constraintBottom_toTopOf="@+id/spinner_VehicleFuel"
                        app:layout_constraintStart_toStartOf="@+id/spinner_VehicleFuel" />

                    <Spinner
                        android:id="@+id/spinner_VehicleFuel"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/vehicle_size"
                        app:layout_constraintBottom_toTopOf="@+id/spinner_VehicleSize"
                        app:layout_constraintStart_toStartOf="@+id/spinner_VehicleSize" />

                    <Spinner
                        android:id="@+id/spinner_VehicleSize"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/vehicle_year"
                        app:layout_constraintBottom_toTopOf="@+id/editText_VehicleYear"
                        app:layout_constraintStart_toStartOf="@+id/editText_VehicleYear" />

                    <EditText
                        android:id="@+id/editText_VehicleYear"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="50dp"
                        android:ems="10"
                        android:hint="Range: 1800 - 2030"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_VehicleYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Current: "
                        app:layout_constraintStart_toEndOf="@+id/editText_VehicleYear"
                        app:layout_constraintTop_toTopOf="@+id/editText_VehicleYear" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="Distance driven(km/year):"
                        app:layout_constraintBottom_toTopOf="@+id/editText_VehicleDistance"
                        app:layout_constraintStart_toStartOf="@+id/editText_VehicleDistance" />

                    <EditText
                        android:id="@+id/editText_VehicleDistance"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="50dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="Range: 0 - 120 000"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_VehicleDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Current: "
                        app:layout_constraintStart_toEndOf="@+id/editText_VehicleDistance"
                        app:layout_constraintTop_toTopOf="@+id/editText_VehicleDistance" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/vehicle_passengers"
                        app:layout_constraintBottom_toTopOf="@+id/editText_VehiclePassengers"
                        app:layout_constraintStart_toStartOf="@+id/editText_VehiclePassengers" />

                    <EditText
                        android:id="@+id/editText_VehiclePassengers"
                        android:layout_width="220dp"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:layout_marginTop="50dp"
                        android:hint="Range: 1 - 10"
                        android:inputType="number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_VehiclePassengers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Current: "
                        app:layout_constraintStart_toEndOf="@+id/editText_VehiclePassengers"
                        app:layout_constraintTop_toTopOf="@+id/editText_VehiclePassengers" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_VehicleSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="25dp"
                android:onClick="saveChanges"
                android:text="Save changes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/button_VehicleCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="16dp"
                android:onClick="cancel"
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>